at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8
  -  Added language files
     * APT sources.list (milian)
     * Boo (Marcus Griep)
     * CIL (Common Intermediate Language, .NET Assembly) (Marcus Griep)
     * KLoneC (Mickael Auger)
     * KLoneC++ (Mickael Auger)
     * PowerShell (Frode Aarebrot)
     * Xorg configuration (milian)
  -  Added an optimizer for lists in regular expressions. Using these cached lists results in a speedup of approx. 100%.
     The slightly increased memory consumption (~150KB for PHP language file) is more than worth it! (milian)
  -  Added support for external style information files to override language defaults without modifying language files (BenBE)
  -  Added PARSER_CONTROL for OOLANG method highlighting (SF#1923060, BenBE)
  -  Fixed HTML comments spawning multiple lines producing invalid XHTML output (SF#1738173, BenBE)
  -  Added support for multichar string delimiters (SF#1932083, BenBE)
  -  Added support for parameters beginning with dash in BASH language (BenBE)
  -  Fixed problems of unfinished strings and comments producing invalid XHTML (SF#1996353, BenBE)
  -  Fixed some problems with old PHP versions (SF#1975625, milian, BenBE)
  -  Use spaces instead of tabs for indendation in language files to have a consistent
     coding standard accross geshi files (milian)
  -  Make language_permissions configurable in language files via ['PARSER_CONTROL']['ENABLE_FLAGS']
     this makes is_a calls unneeded and thus prevents PHP notices in PHP 5.x (milian)
  -  Support Apache's configuration sections, see http://httpd.apache.org/docs/2.2/sections.html (milian)
  -  Minor issue with PHP Heredoc and Nowdoc syntax sometimes not getting highlighted (BenBE)
  -  Fixed economy mode for GeSHi::get_stylesheet() - now it just makes so much more sense! (milian)
Version 1.0.7.22
  -  Added language files
     * glSlang (BenBE)
     * KiXtart (Riley McArdle)